<resources>
    <string name="app_name">中国金鱼</string>
    <string name="entry">立即体验</string>
    <string name="version">\n当前版本 v1.1.0</string>
    <string name="newv">新版更新</string>
    <string name="ms_intro">
        \n\u3000\u3000根据背鳍和眼部差异，金鱼可为五大类：金鲫种、文种、龙种、蛋种和龙背种。\n
    </string>
    <string name="jjz_intro0"> \n\n一、金鲫种\n</string>
    <string name="jjz_intro">
        \u3000\u3000它们是金鱼的原始类型，与金鱼的祖先—金黄色鲫鱼相似，是目前大面积的观赏水域中的主要鱼种。\n
        \u3000\u3000{A}形态特征：形状与普通鲫鱼相似。主要特征是身体狭长呈流线型、小眼睛、单尾鳍、游动很快但不怕人，投喂食物时常常群集水中争食。\n
        \u3000\u3000{B}种类：依据色泽的不同，分为白草鲫、金鲫、墨黑鲫、黄黑鲫、红白鲫等。 \n
        \n（1）单尾草金鱼：\n
        \u3000\u3000{a}形态特征：俗称红鲫鱼或金鲫鱼，体呈纺锤形，尾鳍不分叉，背、腹、胸、臀鳍均正常。体质强健，适应性强，食性广，容易饲养。体色除红色外，还有红白花、五花等。\n
        \u3000\u3000{b主要品种：主要根据金鱼体色及外表形状将草金鱼划分为以下几大类：红白草金鱼，红白长尾草金，红草金鱼（较为常见），红长尾草金鱼，黑红长尾草金鱼，红白珍珠鳞片金鱼等。\n
        \n（2）燕尾草金鱼：\n
        \u3000\u3000{a}形态特征：体短而尾特长，尾长超过身长的一半，尾鳍后面分叉似燕子尾形，故名燕尾。性格活泼，易饲养。在花色上，除红与白以及红白相间的花色外，还有玻璃花和五彩等。\n
        \u3000\u3000{b}主要品种：现有的品种有红燕尾、红白燕尾等。
    </string>
    <string name="wz_intro0">\n\n二、文种\n</string>
    <string name="wz_intro">
        \u3000\u3000文种金鱼是中国金鱼中的“元老”品种之一。也是当代金鱼中最大的一个系列品种。\n
        \u3000\u3000{A}形态特征：体形短圆粗壮；头型有尖、宽两种；鳞片有软、硬及珠鳞之分；腹臌圆；眼小平直，不凸于眼眶外；有背鳍，尾鳍有四叶双开，其中有长、短，大、小两种，俯视鱼体，形状像“文”字而得名。体色多数为红、红白、蓝、紫、红黑、五花及透明软鳞（即玻璃花）等。\n
        \u3000\u3000{B}种类：文种金鱼品种繁多，花色变化最多，目前有50余个品种，文种金鱼的性状变异主要有体呈三角形的文鱼、头部生有肉瘤的狮子头、鳞片发生变异的珍珠鳞（鼻端进化为绒球）等。代表品种有：高头（又名堆肉）、绒球、珍珠鳞鱼、狮子头、鹤顶红、琉金等。\n
        \n（1）珍珠鳞鱼：\n
        \u3000\u3000{a}主要特征：因其鳞片石灰质沉淀，鳞片外凸，形似珍珠而得名。其花色主要有黑、蓝、红、白、紫、五花及各种组合色。珍珠鳞鱼的身体有长形和球形之分。皮球珍珠鳞鱼体如圆球，各鳍十分的短小，游动时有些笨拙。\n
        \u3000\u3000{b}主要品种：皇冠珍珠鳞鱼、红白珍珠鳞鱼等。\n
        \n（2）琉金：\n
        \u3000\u3000{a}主要特征：头后部明显向上弓曲，头尖。腹部肥大，身体略呈三角形。\n
        \u3000\u3000{b}主要品种：红琉金、白琉金、红头琉金、五花琉金、黑红白花琉金、短尾红琉金、短尾白琉金、短尾十二黑琉金等。\n
        \n（3）狮子头（中国各地名称也不一致，有称之为虎头的）：\n
        \u3000\u3000{a}主要特征：它身体短壮，头部着生有肥厚肉瘤，特别发达，从头顶一直包向两颊，眼与嘴均陷于肉内，酷似一头威风凛凛的雄狮，有健壮美感。它和虎头乍一看上去有些相似，实际上有个最明显的区别，虎头没有背鳍，而狮子头有。\n
        \u3000\u3000{b}主要品种：黑白狮、玉顶红白、红顶三色狮、玉顶银狮、紫兰花狮等。\n
        \n（4）高头：\n
        \u3000\u3000{a}主要特征：头部有一个突出的泡状“罩”。头罩是头顶部的显着特征，可以包住除了眼睛和嘴巴之外的整个面部。好像头顶上戴着顶帽子，故北京、天津称之为帽子鱼。\n
        \u3000\u3000{b}主要品种：紫高头、黄高头、花高头球、红虎头、鹤顶红等。\n
        \n（5）文鱼：\n
        \u3000\u3000{a}主要特征：文鱼身体短宽，呈三角形，头尖如鼠头，鳍发达，为文种中最早的品种。\n
        \u3000\u3000{b}主要品种：花文鱼、彩色文鱼等。\n
        \n（6）水泡眼金鱼（有背鳍）：\n
        \u3000\u3000{a}主要特征：在金鱼的眼球下方，与眼眶连接处，各着生一个半透明的水泡，有背鳍。\n
        \u3000\u3000{b}主要品种：文种红顶水泡、红顶宽鳍三色水泡等。
    </string>
    <string name="lz_intro0">\n\n三、龙种\n</string>
    <string name="lz_intro">
        \u3000\u3000古往今来，龙种金鱼一直被视为“正宗”的中国金鱼，它因有一双特大的眼睛而闻名。\n
        \u3000\u3000{A}形态特征：体型短粗，有背鳍，诸鳍发达，四开大尾鳍。头平而宽，两眼球向左右两眼眶外凸出，形如古代传说中“龙”的眼睛。\n
        \u3000\u3000{B}种类：龙种金鱼有50多个品种，有风尾龙睛、黑龙睛、喜鹊龙睛、玛瑙眼、葡萄眼、灯泡眼等。 \n
        \n（1）龙睛金鱼：\n
        \u3000\u3000{a}主要特征：龙睛金鱼凸出的眼球有各种形状，有圆球形、梨形、圆筒形、葡萄形等等。龙睛金鱼内有高头及绒球状鼻孔褶的，长有绒球状鼻孔褶的龙晴，其头部要呈三角形，嘴部尖小。\n
        \u3000\u3000{b}主要品种：墨龙睛、凤尾龙睛、朱砂眼龙睛、紫白龙睛、十二红龙睛、灯泡眼龙睛等。\n
        \n（2）蝶尾金鱼：\n
        \u3000\u3000{a}形态特征：蝶尾金鱼的特征与龙睛金鱼相同，即眼球特别发达，突出于眼眶之外，尾鳍十分发达酷似蝴蝶，游动缓慢，活动力不强，争抢食物的能力也不强。\n
        \u3000\u3000{b}主要品种：红蝶尾、红白花蝶尾、五花蝶尾、十二红蝶尾、喜鹊花蝶尾、玛瑙眼蝶尾等。
    </string>
    <string name="dz_intro0">\n\n四、蛋种\n</string>
    <string name="dz_intro">
        \u3000\u3000{A}形态特征：蛋种金鱼没有背鳍，背部平滑呈弓形，与文种金鱼的区别就在此。蛋种金鱼体型短圆，形似鸭蛋，背上无鳍，其他各鳍也短小，其中的发头类金鱼尤以短小精悍著称。另外还有一种头面发育不明显，各鳍较长的名为“丹凤”。 \n
        \u3000\u3000{B}种类：蛋种金鱼现约有60余个品种，较名贵的品种有：寿星头、猫狮头、五花虎头、黑虎头、红头虎头、、硃砂泡水泡、五花水泡、五花丹凤等。\n
        \n（1）水泡眼金鱼（无背鳍）：\n
        \u3000\u3000{a}主要特征：在金鱼的眼球下方，与眼眶连接处，各着生一个半透明的水泡，没有背鳍。\n
        \u3000\u3000{b}主要品种：红水泡、白水泡、蓝水泡、红白水泡、黑白水泡、铁包金水泡、红顶水泡、墨水泡、五花水泡、紫蓝水泡等。\n
        \n（2）虎头\n
        \u3000\u3000{a}	主要特征：头绒发达细密，体型为蛋圆形，头部与身体的比例适中，鳞片排列整齐，猫狮虎头的身体小巧精悍，寿星虎头的顶瘤紧密高耸。\n
        \u3000\u3000{b}主要品种：王字虎头、猫狮虎头、	寿星虎头、红顶白虎头，朱砂眼白虎头。此外，虎头类金鱼中也有一些变异品种，如龙睛虎头（鼓眼虎头），虎头球，灯泡眼虎头等。
    </string>
    <string name="lbz_intro0">\n\n五、龙背种\n</string>
    <string name="lbz_intro">
        \u3000\u3000{A}形态特征：龙背种是一类没有背鳍的龙睛金鱼，其他特征与龙种相似。该类金鱼眼睛外凸，且很大，背部平直，尾鳍飘飘。\n
        \u3000\u3000{B}种类：目前，龙背种金鱼品种较少，数量也较少。现约有30作个品种，其中以朝天龙、五花蛋龙球、虎头龙睛等。\n
        \n（1）望天：\n
        \u3000\u3000{a}主要特征：望天金鱼眼球似龙睛,膨大而凸出眼眶,只是一般龙睛的眼睛是向左右凸出的,望天金鱼则是向上呈90度翻转。\n
        \u3000\u3000{b}主要品种:朝天龙、龙背、龙背灯泡眼、虎头龙背灯泡眼、蛤蟆头等。\n
    </string>
    <string name="Hongcao">分类：金鲫种——单尾草金鱼——红草金鱼\n\n中文名：红草金鱼\n\n英文名：Red carassius\n\n食性：动物性饵料，如水蚤、水蚯蚓；植物性饵料，如芜萍、浮游海藻；人造颗粒饲料。\n\n领域性：弱\n\n水温：10~30℃\n\n硬度：硬度低\n\nPH值：微碱性，值7.2 —7.5。
    </string>
    <string name="Hongbaicao">分类：金鲫种——单尾草金鱼——红白草金鱼\n\n中文名：红白草金鱼\n\n英文名：Red and white carassius\n\n食性：动物性饵料，如水蚤、水蚯蚓；植物性饵料，如芜萍；人造颗粒饲料。\n\n领域性：弱\n\n水温：10~30℃\n\n硬度：硬度低\n\nPH值：微碱性，值7.2 —7.5。
    </string>
    <string name="Yanwei">分类：金鲫种——燕尾草金鱼——燕尾\n\n中文名：燕尾\n\n英文名：Red Swallow-tail\n\n领域性：弱,群居\n\n水温：24~27℃\n\nPH值：微碱性，值7.2 —8.5。\n\n繁殖：基质繁殖型，约可产100～200颗卵，一夫一妻或一夫多妻。\n\n特点：体短且尾鳍特长，可达体长的一半以上。尾鳍分叉，似燕子尾形，故取名燕尾。游动时，姿态动人，且身体强健，易于饲养。
    </string>
    <string name="Hongbaizhenzhulin">分类：文种——珍珠鳞鱼——红白珍珠鳞鱼\n\n中文名：红白珍珠鳞鱼\n\n英文名：Red and white pearl-scale\n\n食性：动物性饵料，如水蚤、水蚯蚓；植物性饵料，如芜萍；人造颗粒饲料。\n\n领域性：弱\n\n水温：10~30℃\n\nPH值：微碱性，值7.2 —8.5。\n\n特点：身上有红、白两种协调的色泽，头上亦有红白色的肉瘤，搭配长长的阔尾，实在是非常迷人。
    </string>
    <string name="Yuyintouzhenzhulin">分类：文种——珍珠鳞鱼——玉印头皇冠珍珠鳞鱼\n\n中文名：玉印头皇冠珍珠鳞鱼\n\n英文名：Red Oranda with White Jade Stamp on Head-Crown pearl\n\n食性：动物性饵料，如水蚤、水蚯蚓；植物性饵料，如芜萍；人造颗粒饲料。\n\n领域性：弱\n\n水温：10~30℃\n\nPH值：微碱性，值7.2 —8.5。\n\n特点：全身色红，头顶生有肉瘤，肉瘤正中白色，好似方正的玉印，故名玉印头。
    </string>
    <string name="Shirheizhenzhulin">分类：文种——珍珠鳞鱼——十二黑皇冠珍珠鳞鱼\n\n中文名：十二黑皇冠珍珠鳞鱼\n\n英文名：Twelve-balck Crown pearl\n\n食性：动物性饵料，如水蚤、水蚯蚓；植物性饵料，如芜萍；人造颗粒饲料。\n\n领域性：弱\n\n水温：10~30℃\n\nPH值：微碱性，值7.2 —8.5。\n\n
    </string>
    <string name="Changweihongbailiujin">分类：文种——琉金——长尾红白琉金\n\n中文名：长尾红白琉金\n\n食性：亿彩，红虫\n\n水温：15-25℃（最适）\n\n特点：鳍宽大，且长，身短，肚腹圆大，头尖，身体呈红白相间的颜色特点。\n\n# 适宜用深水饲养，通常适宜深度在40厘米左右。
    </string>
    <string name="Hupiwenduanweiliujin">分类：文种——琉金——虎皮纹短尾琉金\n\n中文名：虎皮纹短尾琉金\n\n食性：亿彩，红虫\n\n水温：15-25℃（最适）\n\n特点：身体接近正圆，头后的背高于头部，尾鳍短小，鼠头玻璃眼圆嘴，鳞片排列紧密。\n\n# 适宜用深水饲养，通常适宜深度在40厘米左右。
    </string>
    <string name="Changweiheiliujin">分类：文种——琉金——长尾黑琉金\n\n中文名：长尾黑琉金\n\n食性：亿彩，红虫\n\n特点：鳞片排列紧密，头像老鼠眼睛像玻璃，嘴较圆，身体接近正圆，头后的背高于头部，尾鳍较长。全身为黑色，无杂色，包括各鳍在内所有的颜色均为黑色，腹部为稍显灰色或灰黑色。\n\n# 适宜用深水饲养，通常适宜深度在40厘米左右。
    </string>
    <string name="Sanseduanweiliujin">分类：文种——琉金——三色短尾琉金\n\n中文名：三色短尾琉金\n\n食性：亿彩，红虫\n\n# 适宜用深水饲养，通常适宜深度在40厘米左右。
    </string>
    <string name="Hongbaiduanweiliujin">分类：文种——琉金——红白短尾琉金\n\n中文名：红白短尾琉金\n\n食性：亿彩，红虫\n\n特点：周身表现为红白两色，两种颜色搭配均匀，色彩分明者为佳品，其中要求红色鲜艳，白色纯正无杂色，此种琉金金鱼的观赏性极好，如不仔细观赏就如同入缸中盛开的一朵色彩鲜艳的花。# 适宜用深水饲养，通常适宜深度在40厘米左右。
    </string>
    <string name="Hongdingsanseshi">分类：文种——狮子头/虎头——红顶三色狮\n\n中文名：红顶三色狮\n\n食性：饲喂的都是富有营养的动物性饲料和白芝麻等。动物性饲料如水蚤、蚯蚓、黄粉虫、青虫、皮虫等。主要喂食的是蚯蚓和芝麻。红、黑的蚯蚓都可喂。\n\n水温：8~22℃\n\n特点：头顶肉瘤为红色，体色为黑白黄三种花色，躯体短壮，尾鳍舒展宽大。
    </string>
    <string name="Yudingyinshi">分类：文种——狮子头/虎头——玉顶银狮\n\n中文名：玉顶银狮\n\n食性：饲喂的都是富有营养的动物性饲料和白芝麻等。动物性饲料如水蚤、蚯蚓、黄粉虫、青虫、皮虫等。主要喂食的是蚯蚓和芝麻。红、黑的蚯蚓都可喂。\n\n水温：8~22℃\n\n特点：玉顶银狮子头金鱼是狮子头金鱼中有着明显头瘤的特点的玉顶狮子头中的一个颜色，玉顶银狮子外貌十分惊艳，有着超凡脱俗的异样表现。玉顶银狮子头金鱼的头瘤部分与玉顶狮子头金鱼的相同，有着接近淡黄色或者白色的色彩表现，而与这个产生鲜明比较的是玉顶银狮子的体色，以及各鳍的颜色。银色的鳞片以及体色在使得这尾金鱼魅力十足，灯光下，银色会反射出异样的光芒，这样的外貌表现是其他金鱼所不具备的。
    </string>
    <string name="Jintouheibaishi">分类：文种——狮子头/虎头——金头黑白狮\n\n中文名：金头黑白狮\n\n食性：饲喂的都是富有营养的动物性饲料和白芝麻等。动物性饲料如水蚤、蚯蚓、黄粉虫、青虫、皮虫等。主要喂食的是蚯蚓和芝麻。水温：8~22℃\n\n特点：金头黑白狮不同于黑白狮子头金鱼，其头瘤颜色为黄色或者淡黄色，非常好看，而体色又呈现出交错的黑白两色；其又隶属于玉顶狮子头，这样的头瘤特点是玉顶狮的头瘤特征，但是其体色，十分独特，故称之为金头黑白狮子头金鱼。
    </string>
    <string name="Huanggaotou">分类：文种——高头——黄高头\n\n中文名：黄高头\n\n英文名：Yellow Oranda\n\n食性：饵料有鱼虫、小浮萍、水蚯蚓、颗粒饲料等。水温：10~28℃，可耐低温。\n\n特点：黄高头体色洁白无瑕，且有反光。头顶肉瘤却发育丰满，色黄如玉。金鱼之中黄色者不多，被视为珍品。并且，黄高头的性格非常温和，不会发生大金鱼追袭小金鱼的现象。除了繁殖季节外，各种形状与各种色泽的金鱼都可混养在一起。
    </string>
    <string name="Hongmao">分类：文种——高头——红帽金鱼\n\n中文名：红帽金鱼\n\n英文名：Red Cap; Red-cap Oranda\n\n水温：10~30℃，可耐10℃以下低温（繁殖水温:18~22℃）\n\n食性：鱼虫，水蚯蚓，颗粒饲料等。\n\n繁殖：每年清明节前后产卵，雌鱼每次产卵1000-2000粒。\n\n特点：全身鲜红色，头顶右有一个四方形肉瘤，状似帽子。头大，腹圆，四开大尾，尾鳍透明薄如蝉翼。\n\n# 红帽金鱼与鹤顶红极为相像，区别在于鹤顶红的头瘤大，且呈花心状。
    </string>
    <string name="Hedinghong">分类：文种——高头——鹤顶红\n\n中文名：鹤顶红\n\n英文名：White Oranda with Red Cap\n\nPH值：7.5 —8.0\n\n水温：25℃左右\n\n食性：皮虫，蚯蚓，青虫，白芝麻等。\n\n特点：头部着生的红色肉瘤高高耸起，或方、或圆，似仙鹤红冠，而且仅限于顶部，故名鹤顶红。尾鳍长大，超过身长，游动时，飘逸洒脱，似仙鹤翩翩起舞，潇洒出群。
    </string>
    <string name="Sirongqiu">分类：文种——高头——四绒球金鱼\n\n中文名：四绒球金鱼\n\n水温：10~30℃\n\nPH值：微碱性，值7.2 —7.5。\n\n特点：体长10-20CM。鱼体的鼻孔膜发达，形成四朵膨大的球花，球花的颜色有红色、白色、紫色等。四绒球是从双绒球金鱼中选择数尾突变个体，再与双绒球金鱼回交，经2-3年才培育成四绒球。
    </string>
    <string name="Huawenyu">分类：文种——文鱼——花文鱼\n\n中文名：花文鱼\n\n英文名：Red and White Wen-yu[网]\n\n特点：色彩红白相间。若两色相嵌，且左右对称，则极其美妙动人，身价也高。游动较慢，体态偏胖。
    </string>
    <string name="Caisewenyu">分类：文种——文鱼——彩色文鱼\n\n中文名：彩色文鱼\n\n英文名：Calico Wen-yu[网]\n\n特点：全身具有普通鳞、透明鳞和网透明鳞三种鳞片，体色呈现红白蓝三种以上颜色，五彩斑斓，非常美丽，以头顶具有红艳色斑者为贵。
    </string>
    <string name="Hongdingshuipao">分类：文种——水泡眼金鱼（有鳍）——白水泡红帽子\n\n中文名：白水泡红帽子（白泡红鹅头）\n\n英文名：Red-hat Bubble eye\n\n特点：水泡金鱼的眼球下方有两颗半透明的水泡，随着年龄的增长，水泡会慢慢增大，外观来看，水泡金鱼头部顶着两颗大大的水泡，头顶上之肉瘤为红色。
    </string>
    <string name="Molongjing">分类：龙种——龙睛金鱼——墨龙睛\n\n中文名：墨龙睛\n\n英文名：Black Dragon-eye\n\n领域性：弱\n\n食性：动物性饲料和白芝麻等。\n\n水温：10~30℃\n\nPH值：微碱性，值7.2 —7.5。\n\n特点：腹圆，尾大，全身乌黑油亮，两眼漆黑特大似算盘珠。
    </string>
    <string name="Xiquehualongjing">分类：龙种——龙睛金鱼——喜鹊花龙睛\n\n中文名：喜鹊花龙睛\n\n英文名：Magpie Dragon-eye[网]\n\n特点：体色蓝白相间，头、吻、眼、尾鳍均呈黑色，色斑如喜鹊，两色斑纹虽大小不一，但黑白分明。
    </string>
    <string name="Dengpaoyanlongjing">分类：龙种——龙睛金鱼——灯泡眼龙睛\n\n中文名：灯泡眼龙睛\n\n水性：强，在深水，浅水，清水，浊水，流水等大小水体均可生活，生命力较强。\n\n特点：头平而宽，眼睛独特，凸出，眼球的形状各异有圆形，梨形，圆筒形以及葡萄形，膨大凸出眼眶之外。鳞片较大。背鳍，臀鳍较长，背鳍高耸后缘有锯齿状，尾鳍为深叉形。眼球外透明薄膜微凸，似电灯泡。
    </string>
    <string name="Zhushayanlongjing">分类：龙种——龙睛金鱼——朱砂眼黑龙睛\n\n中文名：朱砂眼黑龙睛\n\n食性：饵料有鱼虫、颗粒饲料。\n\n水温：10~28℃\n\n特点：两眼球颜色为朱砂红，突出眼眶外，体型短粗，有四个张大的尾鳍，头平且宽。
    </string>
    <string name="Zibailongjing">分类：龙种——龙睛金鱼——紫白龙睛\n\n中文名：紫白龙睛\n\n英文名：Purple and White Dragon-eye\n\n特点：头、眼、背、胸、腹、臀、尾鳍保存了紫色，而浑身形成了非常银白的颜色。
    </string>
    <string name="Shirhonglongjing">分类：龙种——龙睛金鱼——十二红龙睛\n\n中文名：十二红龙睛\n\n英文名：White Dragon-eye with Twelve Red Patches[网]\n\n特点：是白龙睛中近年新出现的一种变异。鱼体银光闪烁，但胸、腹、尾，和背鳍、吻部凑拢共十二处红色，红白对称，十分有趣。
    </string>
    <string name="Zihutoulongjing">分类：龙种——龙睛金鱼——紫虎头龙睛\n\n中文名：紫虎头龙睛\n\n英文名：Brown Dragon-eye with Tiger-head[网]\n\n# 虎头龙睛与高头的区别在于，虎头的肉瘤须发育丰满，整个头部显得方正厚实，极具威风。眼球不凸出的，方属正品。
    </string>
    <string name="Shirhongdiewei">分类：龙种——蝶尾——十二红蝶尾\n\n中文名：十二红蝶尾\n\n特点：游动时双球戏水，灵动可爱。通身银白，只有两眼圈、两绣球、两胸鳍、两腹鳍、四叶尾鳍共十二处呈火红色。
    </string>
    <string name="Huangdiewei">分类：龙种——蝶尾——黄蝶尾\n\n中文名：黄蝶尾\n\n特点：尾鳍十分发达·其前缘向头部"钩"过去，整个尾鳍四叶舒展开来，或如"V"形，或如"X"形，如同蝴蝶一般，十分美丽，呈黄色。
    </string>
    <string name="Hongbaihuadiewei">分类：龙种——蝶尾——红白花蝶尾\n\n中文名：红白花蝶尾\n\n特点：红白相间，尾鳍十分发达，其前缘向头部"钩"过去，整个尾鳍四叶舒展开来，或如"V"形，或如"X"形，如同蝴蝶一般，十分美丽。
    </string>
    <string name="Heibaishuipao">分类：蛋种——水泡眼金鱼（无背鳍）——黑白水泡\n\n中文名：黑白水泡\n\n英文名：Black and White Bubble eye\n\n特点：在眼球下方与眼眶衔接处各自生着一个半透明的水泡，水泡的外部由皮质薄膜包裹着淋巴液，随着鱼龄的增长，水泡会逐渐变大，如同金鱼的头部顶着两只圆圆的气球，极其招人瞩目。
    </string>
    <string name="Dengpaoyangongbeishuipao">分类：蛋种——水泡眼金鱼（无背鳍）——灯泡眼弓背水泡\n\n中文名：灯泡眼弓背水泡\n\n食性：水生生物饲料和人工合成饲料。水生生物饲料包括金鱼可以摄食的水生动植物的活体或干品，包括：水蚤、剑水蚤、血虫、水蚯蚓、浮萍等。人工合成饲料根据形态的不同，可以分为：颗粒饲料、粉状饲料、片状饲料、贴片饲料四种。\n\n特点：水泡鱼中的一个典型的品种，全身几乎呈淡白色，其头部、眼部的颜色则呈淡黄色以及橙黄色，此鱼的眼睛十分特别，如同两个大灯泡悬空挂在头部两侧，鱼儿的背部呈弯弓状。
    </string>
    <string name="Lanhuashuipao">分类：蛋种——水泡眼金鱼（无背鳍）——蓝花水泡\n\n中文名：蓝花水泡\n\n食性：水蚤、剑水蚤、血虫、水蚯蚓、浮萍等。\n\n特点：体色为蓝色，眼具有水泡，即在眼球周围生长出一个内含液体呈半透明状的水泡，因此得名"水泡眼"，水泡的泡膜很薄，清晰欲穿，像两只球分别挂在鱼头两侧。\n\n# 饲养水泡的池水不宜过深，最好在20厘米以下，对水质的要求较高。
    </string>
     <string name="Hongshouxinghutou">分类：蛋种——虎头——红寿星虎头\n\n中文名：红寿星虎头\n\n食性：一般的金鱼饲料即可，不能喂太饱。\n\n水温：25℃左右\n\n特点：头部肉瘤丰满而厚实，体腹饱满，体型流畅，背部光滑平直，尾鳍短小，鱼身体偏短，头部明显高出背部很多。
    </string>
    <string name="Hongbailanshou">分类：蛋种——虎头——红白兰寿\n\n中文名：红白兰寿\n\n英文名：Red and white ranchu\n\n食性：食性动物性饵料，如水蚤、水蚯蚓；植物性饵料\n\n水温：25℃左右\n\n特点：头部或身体的色泽呈红色或白色，背部后端至尾巴的地方急速向下弯曲，其头上的肉瘤或红或白，十分受人喜爱。
    </string>
    <string name="Chunseshouxinghutou">分类：蛋种——虎头——纯色寿星虎头\n\n中文名：纯色寿星虎头\n\n食性：水蚤、水蚯蚓；植物性饵料\n\n特点：平直的普通文鱼头，光滑流畅的背部线条，超过其体长且薄如蝉翼的秀美尾鳍。
    </string>
    <string name="Hongdanfeng">分类：蛋种——虎头——红丹凤\n\n中文名：红丹凤\n\n食性：水蚤、水蚯蚓；植物性饵料\n\n特点：平直的普通文鱼头，光滑流畅的背部线条，超过其体长且薄如蝉翼的秀美尾鳍。
    </string>
</resources>